tests/compile-fail/two_repr_types.stderr
error: Many repr types specified. Expecting only one.
 --> $DIR/two_repr_types.rs:4:10
  |
4 | #[repr(i8, u8)]
  |          ^

error[E0566]: conflicting representation hints
 --> $DIR/two_repr_types.rs:4:8
  |
4 | #[repr(i8, u8)]
  |        ^^  ^^
  |
  = note: `#[deny(conflicting_repr_hints)]` on by default
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

error[E0600]: cannot apply unary operator `-` to type `u8`
 --> $DIR/two_repr_types.rs:7:12
  |
7 |     VAR1 = -1,
  |            ^^ cannot apply unary operator `-`
  |
  = note: unsigned values cannot be negated

error[E0600]: cannot apply unary operator `-` to type `u8`
 --> $DIR/two_repr_types.rs:8:12
  |
8 |     VAR2 = -3,
  |            ^^ cannot apply unary operator `-`
  |
  = note: unsigned values cannot be negated
